apps/httpbin/httpbin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  labels:
    app: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
        - name: httpbin
          image: mccutchen/go-httpbin:v2.4.0
          resources:
            requests:
              memory: "20M"
              cpu: "50m"
            limits:
              memory: "50M"
              cpu: "100m"
          ports:
            - name: http-port
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /get
              port: http-port
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /get
              port: http-port
            initialDelaySeconds: 3
            periodSeconds: 30
