apps/httpbin/httpbin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin
  annotations:
    cert-manager.io/cluster-issuer: "vault-issuer"
spec:
  tls:
    - hosts:
        - httpbin.home.com
      secretName: httpbin-tls
  rules:
    - host: httpbin.home.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  number: 80
